# graphics-engine

./: CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt  backend.cpp  backend.hpp
engine/core/math/MathVector/: MathVector.hpp
engine/core/math/Matrix/: Matrix.hpp
engine/core/math/interpolation/Lerp/: Lerp.cpp  Lerp.hpp
engine/core/math/interpolation/LerpXYZf/: LerpXYZf.hpp
engine/core/primitives/Normal/: Normal.cpp  Normal.hpp
engine/core/primitives/Point3f/: Point3f.cpp  Point3f.hpp
engine/core/primitives/Polygon/: Polygon.cpp  Polygon.hpp
engine/core/primitives/color/: ColorRGB.cpp  ColorRGB.hpp  ColorRGBf.cpp  ColorRGBf.hpp
engine/core/primitives/color/convert/: ColorRGBfToRGB.cpp  ColorRGBfToRGB.hpp
engine/lighting/PhongFragment/: PhongFragment.cpp  PhongFragment.hpp
engine/lighting/PhongModel/: PhongModel.cpp  PhongModel.hpp
engine/lighting/PointLight/: PointLight.cpp  PointLight.hpp
engine/lighting/util/ReflectedNormalCalculator/: ReflectedNormalCalculator.cpp  ReflectedNormalCalculator.hpp
engine/modeling/BrickGenerator/: BrickGenerator.cpp  BrickGenerator.hpp
engine/modeling/GeometryModel/: GeometryModel.cpp  GeometryModel.hpp
engine/modeling/Material/: Material.cpp  Material.hpp
engine/modeling/Model/: Model.cpp  Model.hpp
engine/pipeline/RasterizationPipeline/: RasterizationPipeline.cpp  RasterizationPipeline.hpp
engine/projection/MatrixCanvasToScreen/: MatrixCanvasToScreen.cpp  MatrixCanvasToScreen.hpp
engine/projection/MatrixPerspectiveProjection/: MatrixPerspectiveProjection.cpp  MatrixPerspectiveProjection.hpp
engine/rasterization/DrawLine/: DrawLine.cpp  DrawLine.hpp
engine/rasterization/Rasterizer/: Rasterizer.cpp  Rasterizer.hpp
engine/scene/: Scene.cpp  Scene.hpp
engine/shading/PhongShader/: PhongShader.cpp  PhongShader.hpp
engine/transform/MatrixTransformer/: MatrixTransformer.cpp  MatrixTransformer.hpp
engine/transform/MatrixTransformer/operations/: IMatrixOperation.hpp  MatrixArbitrary.cpp  MatrixArbitrary.hpp
engine/transform/MatrixTransformer/operations/move/: MatrixMoveX.cpp  MatrixMoveX.hpp  MatrixMoveY.cpp  MatrixMoveY.hpp  MatrixMoveZ.cpp  MatrixMoveZ.hpp
engine/transform/MatrixTransformer/operations/new_basis/: MatrixMoveOrigin.cpp  MatrixMoveOrigin.hpp  MatrixToZXY.cpp  MatrixToZXY.hpp
engine/transform/MatrixTransformer/operations/rotate/: MatrixRotateAroundNormal.cpp  MatrixRotateAroundNormal.hpp  MatrixRotateEuler.cpp  MatrixRotateEuler.hpp  MatrixRotateX.cpp  MatrixRotateX.hpp  MatrixRotateY.cpp  MatrixRotateY.hpp  MatrixRotateZ.cpp  MatrixRotateZ.hpp
engine/transform/MatrixTransformer/operations/scale/: MatrixScaleX.cpp  MatrixScaleX.hpp  MatrixScaleXYZ.cpp  MatrixScaleXYZ.hpp  MatrixScaleY.cpp  MatrixScaleY.hpp  MatrixScaleZ.cpp  MatrixScaleZ.hpp
engine/view/Camera/: Camera.cpp  Camera.hpp
engine/view/MatrixViewTransform/: MatrixViewTransform.cpp  MatrixViewTransform.hpp
engine/view/MatrixViewportToCanvas/: MatrixViewportToCanvas.cpp  MatrixViewportToCanvas.hpp
engine/visibility/BackSurfaceCull/: BackSurfaceCull.cpp  BackSurfaceCull.hpp
engine/visibility/DepthTest/: DepthTest.cpp  DepthTest.hpp  IDepthComparator.hpp
engine/visibility/DepthTest/ColorBuffer/: ColorBuffer.cpp  ColorBuffer.hpp
engine/visibility/DepthTest/DepthBuffer/: DepthBuffer.cpp  DepthBuffer.hpp
engine/visibility/DepthTest/ProjectedFragment/: ProjectedFragment.cpp  ProjectedFragment.hpp
engine/visibility/DepthTest/comparator/DepthComparatorNegInf/: DepthComparatorNegInf.cpp  DepthComparatorNegInf.hpp
ui/: CMakeLists.txt
ui/qt/Canvas/: Canvas.cpp  Canvas.hpp
ui/qt/MainWindow/: MainWindow.cpp  MainWindow.hpp
ui/qt/ObjectsWidget/: ObjectsWidget.cpp  ObjectsWidget.hpp
